Corrected the alignment of the rows in the middle area.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -99,41 +99,24 @@ h2 h3 h4 h5 {
 .middle-area {
   display: flex;
   justify-content: center;
+  align-items: center;
   align-items: space-between;
   flex-flow: column;
   width: 1000px;
   padding-top: 100px;
-  margin-left: 100px;
-  margin-right: 100px;
-}
-
-.middle-con {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-  padding-top: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 100px;
+  margin: auto;
 }
 
 #middle-pics {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-around;
   align-items: space-between;
-  padding-bottom: 100px;
   padding-top: 10px;
-}
-
-.picture {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-flow: row;
 }
 
 .pictures {
-  display: blox;
   width: 300px;
   height: 200px;
   margin: 10px;
@@ -146,10 +129,10 @@ h2 h3 h4 h5 {
 }
 
 .second-row {
-  display: block;
+  display: flex;
   justify-content: center;
   align-content: center;
-  flex-flow: column;
+  flex-flow: row;
 }
 
  /* bottom-area:  */
